# apiraa

./: Cargo.toml  README.md
src/: main.rs
zshrc/: scripts.zsh  zshrc.zsh
