[package]
name = "apiraa"
version = "1.0.0"
edition = "2021"
authors = ["NerdNinja <NerdNinja420@gmail.com>"]
repository = "https://github.com/NerdNinja420/apiraa"
documentation = "https://docs.rs/apiraa"
readme = "./README.md"
license = "./LICENSE"
license = "MIT"
description = "A Rust program that finds and copies the activate script path of a virtual environment to the system clipboard."
keywords = ["apirra","virtualenv", "wayland", "clipboard", "python", "env"]
categories = ["command-line-utilities"]
